# pclipsync

./: .gitignore  Makefile  README.md  pyproject.toml
plan/: pclipsync-implementation-plan.md
src/pclipsync/: __main__.py  client.py  client_constants.py  client_retry.py  clipboard.py  (+30 more)
tests/: conftest.py  conftest_server_handler.py  conftest_sync_loop_inner.py  test_client.py  test_client_retry.py  test_client_retry_connect.py  test_client_retry_exit.py  test_client_retry_hash.py  test_clipboard.py  test_clipboard_content.py  test_clipboard_display.py  test_clipboard_io.py  test_clipboard_io_deferred.py  test_clipboard_io_incr.py  test_clipboard_io_incr_advanced.py  test_clipboard_io_incr_integration.py  test_clipboard_io_property_result.py  test_clipboard_io_read_property.py  test_clipboard_selection.py  test_clipboard_selection_events.py  test_clipboard_selection_incr.py  test_clipboard_selection_incr_chunk_complete.py  test_clipboard_selection_incr_chunk_first.py  test_clipboard_selection_incr_chunk_next.py  test_clipboard_selection_incr_cleanup.py  test_clipboard_selection_incr_cleanup_concurrent.py  test_clipboard_selection_incr_events.py  test_clipboard_selection_incr_initiate.py  test_clipboard_selection_incr_needs.py  test_clipboard_selection_incr_response.py  test_clipboard_selection_incr_small.py  test_clipboard_selection_request.py  test_clipboard_selection_request_more.py  test_clipboard_validate.py  test_hashing.py  test_hashing_compute.py  test_hashing_state_basic.py  test_hashing_state_ownership.py  test_integration.py  test_integration_lifecycle.py  (+26 more)
