[project]
name = "pclipsync"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "python-xlib>=0.33",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.10",
    "types-python-xlib>=0.33.0.20250809",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pclipsync"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (require X11)",
]
asyncio_mode = "auto"
